<resources>
    <string name="app_name">CBT SMK TH 46</string>
    <string name="token_title">CBT SMK TH 46</string>
    <string name="token_instruction">Masukkan Token Masuk</string>
    <string name="token_hint">Token</string>
    <string name="btn_masuk">MASUK KE UJIAN</string>
    <string name="btn_selesai">SELESAI UJIAN</string>
    <string name="btn_keluar">KELUAR DARI UJIAN</string>
    <string name="btn_kembali">KEMBALI KE UJIAN</string>
    <string name="token_keluar_instruction">Masukkan Token Keluar</string>
    <string name="copyright">SMK TUNAS HARAPAN JAKARTA BARAT - 2026</string>
    <string name="empty_token_error">Silakan masukkan token terlebih dahulu</string>
</resources>